--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   
   header{
     /* background-image: url("/images/forrest.jpg"); */
-    background-image: url("images/back1.jpg");
+    background-image: url(images/back1.jpg);
     background-size:cover;
     height: 90vh;
     
@@ -124,7 +124,7 @@
   }
   /*****************Skills**************/
 .skills{
-    background-image: url("images/back1.jpg");
+    background-image: url(images/back1.jpg);
     background-attachment: fixed;
     
     
